# Vega

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/etna/: CMakeLists.txt  allocator.cpp  buffer.cpp  command.cpp  core.cpp  descriptor.cpp  device.cpp  image.cpp  instance.cpp  pipeline.cpp  queue.cpp  renderpass.cpp  sampler.cpp  shader.cpp  surface.cpp  swapchain.cpp  synchronization.cpp
src/etna/etna/: allocator.hpp  buffer.hpp  command.hpp  core.hpp  descriptor.hpp  device.hpp  etna.hpp  image.hpp  instance.hpp  pipeline.hpp  queue.hpp  renderpass.hpp  sampler.hpp  shader.hpp  surface.hpp  types.hpp
src/etna/include/: buffer.hpp  command.hpp  core.hpp  descriptor.hpp  device.hpp  etna.hpp  image.hpp  instance.hpp  pipeline.hpp  queue.hpp  renderpass.hpp  shader.hpp  swapchain.hpp  synchronization.hpp
src/fonts/: CMakeLists.txt
src/shaders/: CMakeLists.txt  shader.frag  shader.vert
src/utils/: CMakeLists.txt  resource.cpp  throw_exception.cpp
src/utils/utils/: casts.hpp  resource.hpp  throw_exception.hpp
src/vega/: CMakeLists.txt  buffer_manager.cpp  buffer_manager.hpp  camera.cpp  camera.hpp  descriptor_manager.cpp  descriptor_manager.hpp  frame_manager.cpp  frame_manager.hpp  gui.cpp  gui.hpp  lights.cpp  lights.hpp  mesh_store.cpp  mesh_store.h  mesh_store.hpp  platform.hpp  render_context.cpp  render_context.hpp  scene.cpp  scene.hpp  swapchain_manager.cpp  swapchain_manager.hpp  texture_loader.cpp  texture_loader.hpp  vega.cpp  vertex.cpp  vertex.hpp
src/vega/utils/: cast.hpp  math.hpp  misc.cpp  misc.hpp
tests/: CMakeLists.txt  test_main.cpp  test_utils.cpp
tests/unit-tests/: CMakeLists.txt  test_etna.cpp  test_utils.cpp
tools/: CMakeLists.txt
tools/cmake/: CompileShaders.cmake  MakeFonts.cmake
tools/make-resource/: CMakeLists.txt  make_resource.cpp
